# effects

./: .nvimrc  .travis.yml  AUTHORS  CMakeLists.txt  README.md  appveyor.yml  stamp.h
cmake/: FindGlib2.cmake  FindPortAudio.cmake
include/gnu-guitar/effects/: backbuf.h  biquad.h  data-block.h  echo.h  effect.h  printf.h  reverb.h  tremolo.h  tubeamp.h  utils.h
src/: CMakeLists.txt  audio-driver.c  audio-driver.h  backbuf.c  bench.c  bench.h  biquad.c  echo-bench.c  echo-test.c  echo.c  effect.c  effect.h  ladspa.c  printf.c  reverb-bench.c  reverb-test.c  reverb.c  test.c  test.h  tremolo-bench.c  tremolo-test.c  tremolo.c  tubeamp-bench.c  tubeamp-test.c  tubeamp.c  utils.c
src/ladspa/: CMakeLists.txt  echo.c  gnu-guitar-ladspa.def  ladspa-descriptor.c  reverb.c  tremolo.c  tubeamp.c
